--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,7 @@ a{
     width:90%;
     height:550px;
     background-image: url(./images/projects/Project1.png);
+    
     background-size: cover;
     /* background-repeat: no-repeat; */
     position:relative;
@@ -421,12 +422,12 @@ a{
     transform:scale(1.1);
   }
   #project1{
-    background-image: url(./images/projects/Project1.png);
+    background-image: url(./photo_project-1.png);
   }
 
   #project2{
     margin-left:120px;
-    background-image: url(./images/projects/Project2.png);
+    background-image: url(./photo-project-2.png);
   }
   #project3{
     background-image: url(./images/projects/Project3.png);
@@ -682,6 +683,10 @@ footer{
 }
 .icon-wrapper{
   display: flex;
-  gap:1rem
+  gap:1.5rem
 }
+
+
+
+
 
