--- a/styles.css
+++ b/styles.css
@@ -430,7 +430,7 @@ a{
     background-image: url(./photo-project-2.png);
   }
   #project3{
-    background-image: url(./images/projects/Project3.png);
+    background-image: url(./photo-project-3.png);
   }
   #project4{
     margin-left:120px;
